<resources>
    <string name="app_name">Rotation Repair</string>

    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>

    <string name="overlay_permission_required">Overlay permission is required for the service to work.</string>
    <string name="notification_permission_required">Notification permission is required to keep the service running.</string>
    <string name="battery_optimization_msg">Please set \"Don\'t Optimize\" for this app to prevent the service from being stopped.</string>

    <string name="notif_channel_name">Rotation Repair Service</string>
    <string name="notif_title">Rotation Repair Active</string>
    <string name="notif_content">Enabled</string>

    <string name="app_description">Corrects screen rotation globally by inverting hardware sensor values for devices with inverted sensors.</string>

    <string name="invert_portrait">Invert Portrait</string>
    <string name="invert_landscape">Invert Landscape</string>
    <string name="prevent_upside_down">Prevent Upside-Down Portrait</string>

    <string name="hysteresis_label">Rotation Hysteresis (Sensitivity)</string>
    <string name="hysteresis_value">%1$d deg</string>
    <string name="hysteresis_value_default">10 deg</string>
</resources>